--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -2,7 +2,8 @@
 $color1: #bb3232;         //text color
 $color1-blur: #bb3232ce;  //hover color
 $color2: #2a2a2a;         // background
-$color2-blur: #2a2a2a98;  
+$color2-blur: #2a2a2a98;
+$color2-blur2: #2a2a2ad3;
 $color3: #fff;            //alt color
 $color3-blur: #ffffff86;
 $bg-color: #34495e;
