--- a/css/components/header/_search-form.scss
+++ b/css/components/header/_search-form.scss
@@ -1,7 +1,7 @@
 .search-form {
   @include abCenter(70%, 50%);
   @include flex(row, center, center);
-  width: 50%;
+  width: 60%;
   padding: 10px;
   border-radius: 5px;
   background-color: $color2;
@@ -31,6 +31,7 @@
 
   &-submit {
     width: 25%;
+    min-width: 150px;
     background-color: $color1;
     color: $color3;
     font-weight: bold;
@@ -40,6 +41,52 @@
 
     &:hover {
       letter-spacing: 1px;
+    }
+  }
+
+  @include breakpoint(tablet) {
+    width: 90%;
+
+    input {
+      height: 40px;
+    }
+  
+    label {
+      top: 20px;
+      left: 20px;
+      font-size: $font-size + 3;
+    }
+  
+    &-input {
+      padding: 10px 15px 10px 35px;
+      font-size: $font-size + 3;
+    }
+  
+    &-submit {
+      min-width: 110px;
+      font-size: $font-size + 3;
+    }
+  }
+
+  @include breakpoint(small) {
+    input {
+      height: 35px;
+    }
+  
+    label {
+      top: 18px;
+      left: 18px;
+      font-size: $font-size;
+    }
+  
+    &-input {
+      padding: 10px 15px 10px 27px;
+      font-size: $font-size;
+    }
+  
+    &-submit {
+      min-width: 110px;
+      font-size: $font-size;
     }
   }
 }
