--- a/css/style.css
+++ b/css/style.css
@@ -1000,8 +1000,8 @@ section {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .hotdeal .item {
@@ -1056,6 +1056,7 @@ section {
 }
 
 .hotdeal .item span .rate {
+  margin-top: 10px;
   color: #ffe400;
 }
 
@@ -1084,8 +1085,37 @@ section {
   }
 }
 
+.vendor ul {
+  margin-top: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.vendor ul img {
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.vendor ul img:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
 #main {
-  padding: 2rem 0;
+  padding: 3rem 0;
   border-top: 2px solid #bb3232;
   border-bottom: 2px solid #bb3232;
 }
@@ -1134,11 +1164,72 @@ section {
 
 .section-head-more {
   width: 50%;
+  font-size: 1.2rem;
   text-align: end;
   margin-top: 10px;
 }
 
 .section-head-more:hover {
   color: #bb3232;
+  font-style: italic;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  -webkit-transition: all .5s linear;
+  transition: all .5s linear;
+  background-color: #2a2a2ad3;
+  z-index: 100000;
+}
+
+.modal.hide {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.modal-dialog {
+  position: relative;
+  display: block;
+  margin: auto;
+  width: 60vw;
+  height: 100vh;
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  width: 60vw;
+  height: 80vh;
+  overflow: hidden;
+}
+
+.modal-content img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+@media (orientation: portrait) {
+  .modal-content {
+    width: 90vw;
+  }
+}
+
+#close-modal {
+  position: absolute;
+  top: -10px;
+  right: 0;
+  content: "";
+  color: #fff;
+  font-size: 2rem;
 }
 /*# sourceMappingURL=style.css.map */
